--- a/AracFiyatForm.resx
+++ b/AracFiyatForm.resx
@@ -1,4 +1,64 @@
-﻿<root>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<root>
+  <!--
+    Microsoft ResX Schema 
+
+    Version 2.0
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
+    associated with the data types.
+
+    Example:
+
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing"">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+
+    There are any number of "resheader" rows that contain simple
+    name/value pairs.
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
+    mimetype set.
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
+    extensible. For a given mimetype the value must be set accordingly:
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
+    read any of the formats listed below.
+
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -57,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="cikisyap_imglist.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="cikisyap_imglist.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAvA8AAAJNU0Z0AUkBTAMBAQAB
+        CAEAAQgBAAEoAQABKAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAaADAAEoAwABAQEAASAGAAFkEgAD
+        7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D
+        7gH/A+4J/wPuCf8D7gH/A+4F//8A4QAI/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D7gH/A+4J
+        /wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gH//wDhAAj/A+4B/wPuBf8D
+        7gH/A+4F/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D7gX/A+4B/wPuCf8D
+        7gH//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAX/A+4J/wPuAf8D7gX//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAX/A+4J/wPuAf8D7gX//wDhAAj/A+4B/wPuBf8D7gH/A+4F/wMAAf8DAAn/A+4B
+        /wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4B/wMAAf8DAAH/AwAB/wPuBf8D7gH/A+4J
+        /wPuAf//AOEAA+4B/wPuCf8D7gn/A+4B/wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J
+        /wPuAf8D7gX/AwAB/wMAAf8DAAX/A+4J/wPuAf8D7gX//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAF
+        /wPuCf8D7gn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wMAAf8DAAH/AwAF/wPuCf8D7gH/A+4F
+        //8A4QAI/wPuAf8D7gX/A+4B/wPuBf8DAAH/AwAJ/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D
+        7gH/A+4J/wPuAf8DAAH/AwAB/wMAAf8D7gX/A+4B/wPuCf8D7gH//wDhAAj/A+4B/wPuBf8D7gH/A+4F
+        /wMAAf8DAAn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4B/wMAAf8DAAH/AwAB
+        /wPuBf8D7gH/A+4J/wPuAf//AOEAA+4B/wPuCf8D7gn/A+4B/wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F
+        /wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wMACf8D7gn/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D
+        7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D
+        7gH/A+4J/wPuAf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7gn/A+4J
+        /wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D7gH/A+4J/wPuAf//AOEAA+4B/wPuCf8D7gn/A+4B
+        /wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wMACf8D7gn/A+4B
+        /wPuBf//AOEAA+4B/wPuCf8D7gn/A+4B/wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J
+        /wPuAf8D7gX/AwAB/wMAAf8DAAX/A+4J/wPuAf8D7gX//wDhAAj/A+4B/wPuBf8D7gH/A+4F/wMAAf8D
+        AAn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4F/wMAAf8DAAH/AwAF/wPuAf8D
+        7gn/A+4B//8A4QAD7gH/A+4J/wPuCf8D7gH/AwAB/wMABf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D
+        7gn/A+4B/wPuBf8D7gH/A+4B/wMAAf8DAAH/AwAJ/wPuAf8D7gX//wDhAAPuAf8D7gn/A+4J/wPuAf8D
+        AAH/AwAF/wPuCf8D7gn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gX/AwAB/wMAAf8D
+        AAX/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7g3/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMACf8D7gH//wDhAAj/A+4B/wPuBf8D7gH/A+4F/wMAAf8DAAn/A+4B/wPuBf8D7gH/A+4J/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMABf8D7gH//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAF/wPuCf8D7gn/A+4B/wPuAf8D
+        mgH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMABf8D7gX//wDhAAj/A+4B/wPuBf8D7gH/A+4F/wMAAf8DAAn/A+4B/wPuBf8D7gH/A+4J
+        /wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8DAAH/AwAB/wMADf8D7gH//wDhAAj/A+4B/wPuBf8D
+        7gH/A+4F/wMAAf8DAAn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wMAAf8D
+        AAH/AwAF/wPuCf8D7gH//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAF/wPuCf8D7gn/A+4B/wPuBf8D
+        7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8DAAH/AwAB/wMADf8D7gH/A+4F//8A4QAD7gH/A+4J/wPuCf8D
+        7gH/AwAB/wMABf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8DAAH/AwAB/wMABf8D
+        7gn/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7gn/A+4J
+        /wPuAf8D7gX/A+4B/wPuCf8D7gX/AwAF/wPuBf8D7gH/A+4J/wPuAf//AOEAA+4B/wPuCf8D7gn/A+4B
+        /wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B
+        /wPuBf//AOEAA+4B/wPuCf8D7gn/A+4B/wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J
+        /wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D
+        7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gX/AwAF/wPuBf8D7gH/A+4J/wPuAf//
+        AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B
+        /wPuCf8D7gH/AwAB/wMAAf8DAAH/A+4F/wPuAf8D7gn/A+4B//8A4QAD7gH/A+4J/wPuCf8D7gH/AwAB
+        /wMABf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8DAAH/AwAB/wMABf8D7gn/A+4B
+        /wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D
+        7gX/A+4B/wPuCf8D7gH/AwAB/wMAAf8DAAH/A+4F/wPuAf8D7gn/A+4B//8A4QAI/wPuAf8D7gX/A+4B
+        /wPuBf8DAAH/AwAJ/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D7gH/A+4J/wPuAf8DAAH/AwAB
+        /wMAAf8D7gX/A+4B/wPuCf8D7gH//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAF/wPuCf8D7gn/A+4B
+        /wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wMAAf8DAAH/AwAF/wPuCf8D7gH/A+4F//8A4QAD7gH/A+4J
+        /wPuCf8D7gH/AwAB/wMABf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8DAAH/AwAB
+        /wMABf8D7gn/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wPuBf8D7gH/A+4J/wPuAf//AOEAA+4B/wPuCf8D7gn/A+4B/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMABf8D7gn/A+4B/wPuBf//AOEAA+4B/wPuCf8D
+        7gn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D
+        7gn/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B
+        /wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4B//8A4QAI/wPuAf8D7gX/A+4B/wPuCf8D
+        7gn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D
+        7gH//wDhAAFCAU0BPgcAAT4DAAEoAwABoAMAASgDAAEBAQABAQUAASABAxYAA///AP8A/wAkAAs=
+</value>
+  </data>
 </root>
