Araç crud form tasarımı güncellendi

--- a/SifremiUnuttum.resx
+++ b/SifremiUnuttum.resx
@@ -117,6 +117,60 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ımageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="ımageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAPgoAAAJNU0Z0AUkBTAMBAQAB
+        CAEAAQgBAAEeAQABHgEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAXgDAAEeAwABAQEAASAFAAFAATg2
+        AAMJAQwDLwFWAzIBmQMiAcsDEAHrAwQB+gMEAfoDEAHpAyQByAMzAZUDLgFRAwcBCf8AqQADFQEdAzQB
+        lAMKAfMDAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwwB7wM0AYwDEgEY/wCZ
+        AAMCAQMDNQF4AwgB9QMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwsB8QM0AW4EAv8AjQADDgESAykBvQMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMsAbMDCgEN/wCFAAMRARYD
+        HgHTAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DIwHJAwwBD/8AfQADCQELAyEBzgMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DJgHCAwYBB/8AeQADMQGhAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AzQBkv8AdQADKQFEAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMBAf4D
+        JQE6/wBxAAMkATcDAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMlATn/
+        AHUAAzABpgMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMwAaf/AHkAAwwBEAMcAdcD
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/Ax0B1gMMARD/AH0AAxUBHAMeAdIDAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMgAdADFAEb/wCFAAMIAQoDNAGNAwUB+QMAAf8DAAH/AwAB/wMAAf8DJAHIAzIBZQMbASYD
+        BgEIAwYBCAMbASYDMgFlAyQByAMAAf8DAAH/AwAB/wMAAf8DBQH5AzQBjAMIAQr/AJEAAxMBGgM0AXYD
+        KgG5AyABzwMwAVggAAMvAVcDIQHNAyoBuQM0AXYDEwEa/wCxAAMbAScDMwFrAzQBjQM0AY0DMwFrAxsB
+        J/8AwQADHAEpAyoBugMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMqAboDHAEp/wC1AAMsAUwDCAH1AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DCAH1AywBTf8ArQADIgE0AwcB9wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DBwH3AyMBNf8ApQAEAgMgAdADAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DHwHRBAL/AKEAAysBSQMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AywBSv8AoQADMwGVAwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DMwGW/wCh
+        AAMpAb0DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMoAb7/AKEAAyYBxAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AyUBxf8AoQADLwGqAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DLwGr/wChAAM0AW0DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wM0AW7/AKEAAxABFQMIAfUDAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DCAH1AxEBFv8ApQADNQF5AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AzUBev8AqQADAgEDAy8BrAMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DLwGsAwIBA/8ArQADAwEEAzQBigMCAfwDAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAgH8AzQBiwMDAQT/ALkAAxwBKQM0AZIDHQHWAwYB+AMGAfgDHAHXAzQB
+        kgMdASr/AJUAAUIBTQE+BwABPgMAASgDAAF4AwABHgMAAQEBAAEBBQAB4AEBFgAD/wEAAf8BgAEHAfwM
+        AAH+AQABAQH8DAAB+AIAAXwMAAHwAgABPAwAAeACAAEcDAABwAIAAQwMAAHAAgABDAwAAYACAAEEDAAB
+        gAIAAQQMAAHAAgABDAwAAcACAAEMDAAB4AIAARwMAAHwAgABPAwAAfwBHwHgAfwMAAH/AfABPwH8DAAB
+        /wHAAQ8B/AwAAf8BgAEHAfwMAAH/AQABAwH8DAAB/gEAAQEB/AwAAf4BAAEBAfwMAAH+AQABAQH8DAAB
+        /gEAAQEB/AwAAf4BAAEBAfwMAAH+AQABAQH8DAAB/gEAAQEB/AwAAf4BAAEBAfwMAAH/AQABAwH8DAAB
+        /wEAAQMB/AwAAf8BgAEHAfwMAAH/AeABHwH8DAAL
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
