Giriş yap tasarımı tamamlandı

--- a/GirisYapForm.resx
+++ b/GirisYapForm.resx
@@ -117,6 +117,83 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ımageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="ımageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAvA8AAAJNU0Z0AUkBTAMBAQAB
+        CAEAAQgBAAEoAQABKAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAaADAAEoAwABAQEAASAGAAFkEgAD
+        7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D
+        7gH/A+4J/wPuCf8D7gH/A+4F//8A4QAI/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D7gH/A+4J
+        /wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gH//wDhAAj/A+4B/wPuBf8D
+        7gH/A+4F/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D7gX/A+4B/wPuCf8D
+        7gH//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAX/A+4J/wPuAf8D7gX//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAX/A+4J/wPuAf8D7gX//wDhAAj/A+4B/wPuBf8D7gH/A+4F/wMAAf8DAAn/A+4B
+        /wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4B/wMAAf8DAAH/AwAB/wPuBf8D7gH/A+4J
+        /wPuAf//AOEAA+4B/wPuCf8D7gn/A+4B/wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J
+        /wPuAf8D7gX/AwAB/wMAAf8DAAX/A+4J/wPuAf8D7gX//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAF
+        /wPuCf8D7gn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wMAAf8DAAH/AwAF/wPuCf8D7gH/A+4F
+        //8A4QAI/wPuAf8D7gX/A+4B/wPuBf8DAAH/AwAJ/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D
+        7gH/A+4J/wPuAf8DAAH/AwAB/wMAAf8D7gX/A+4B/wPuCf8D7gH//wDhAAj/A+4B/wPuBf8D7gH/A+4F
+        /wMAAf8DAAn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4B/wMAAf8DAAH/AwAB
+        /wPuBf8D7gH/A+4J/wPuAf//AOEAA+4B/wPuCf8D7gn/A+4B/wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F
+        /wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wMACf8D7gn/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D
+        7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D
+        7gH/A+4J/wPuAf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7gn/A+4J
+        /wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D7gH/A+4J/wPuAf//AOEAA+4B/wPuCf8D7gn/A+4B
+        /wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wMACf8D7gn/A+4B
+        /wPuBf//AOEAA+4B/wPuCf8D7gn/A+4B/wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J
+        /wPuAf8D7gX/AwAB/wMAAf8DAAX/A+4J/wPuAf8D7gX//wDhAAj/A+4B/wPuBf8D7gH/A+4F/wMAAf8D
+        AAn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4F/wMAAf8DAAH/AwAF/wPuAf8D
+        7gn/A+4B//8A4QAD7gH/A+4J/wPuCf8D7gH/AwAB/wMABf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D
+        7gn/A+4B/wPuBf8D7gH/A+4B/wMAAf8DAAH/AwAJ/wPuAf8D7gX//wDhAAPuAf8D7gn/A+4J/wPuAf8D
+        AAH/AwAF/wPuCf8D7gn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gX/AwAB/wMAAf8D
+        AAX/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7g3/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMACf8D7gH//wDhAAj/A+4B/wPuBf8D7gH/A+4F/wMAAf8DAAn/A+4B/wPuBf8D7gH/A+4J/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMABf8D7gH//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAF/wPuCf8D7gn/A+4B/wPuAf8D
+        mgH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMABf8D7gX//wDhAAj/A+4B/wPuBf8D7gH/A+4F/wMAAf8DAAn/A+4B/wPuBf8D7gH/A+4J
+        /wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8DAAH/AwAB/wMADf8D7gH//wDhAAj/A+4B/wPuBf8D
+        7gH/A+4F/wMAAf8DAAn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wMAAf8D
+        AAH/AwAF/wPuCf8D7gH//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAF/wPuCf8D7gn/A+4B/wPuBf8D
+        7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8DAAH/AwAB/wMADf8D7gH/A+4F//8A4QAD7gH/A+4J/wPuCf8D
+        7gH/AwAB/wMABf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8DAAH/AwAB/wMABf8D
+        7gn/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7gn/A+4J
+        /wPuAf8D7gX/A+4B/wPuCf8D7gX/AwAF/wPuBf8D7gH/A+4J/wPuAf//AOEAA+4B/wPuCf8D7gn/A+4B
+        /wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B
+        /wPuBf//AOEAA+4B/wPuCf8D7gn/A+4B/wMAAf8DAAX/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J
+        /wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D
+        7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gX/AwAF/wPuBf8D7gH/A+4J/wPuAf//
+        AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B
+        /wPuCf8D7gH/AwAB/wMAAf8DAAH/A+4F/wPuAf8D7gn/A+4B//8A4QAD7gH/A+4J/wPuCf8D7gH/AwAB
+        /wMABf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8DAAH/AwAB/wMABf8D7gn/A+4B
+        /wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMACf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D
+        7gX/A+4B/wPuCf8D7gH/AwAB/wMAAf8DAAH/A+4F/wPuAf8D7gn/A+4B//8A4QAI/wPuAf8D7gX/A+4B
+        /wPuBf8DAAH/AwAJ/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8D7gH/A+4J/wPuAf8DAAH/AwAB
+        /wMAAf8D7gX/A+4B/wPuCf8D7gH//wDhAAPuAf8D7gn/A+4J/wPuAf8DAAH/AwAF/wPuCf8D7gn/A+4B
+        /wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wMAAf8DAAH/AwAF/wPuCf8D7gH/A+4F//8A4QAD7gH/A+4J
+        /wPuCf8D7gH/AwAB/wMABf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B/wPuBf8DAAH/AwAB
+        /wMABf8D7gn/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gX/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wPuBf8D7gH/A+4J/wPuAf//AOEAA+4B/wPuCf8D7gn/A+4B/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMABf8D7gn/A+4B/wPuBf//AOEAA+4B/wPuCf8D
+        7gn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D
+        7gn/A+4B/wPuBf//AOEACP8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D7gn/A+4B
+        /wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4B//8A4QAI/wPuAf8D7gX/A+4B/wPuCf8D
+        7gn/A+4B/wPuBf8D7gH/A+4J/wPuCf8D7gH/A+4F/wPuAf8D7gn/A+4J/wPuAf8D7gX/A+4B/wPuCf8D
+        7gH//wDhAAFCAU0BPgcAAT4DAAEoAwABoAMAASgDAAEBAQABAQUAASABAxYAA///AP8A/wAkAAs=
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="KullaniciPictureBox.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
